# test_small_repo_python

./: .env.example  .gitignore  Dockerfile  README.md  SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  summary.txt
app/: __init__.py  auth.py  database.py  dependencies.py  export.py  models.py  notification_models.py  notification_routes.py  notification_schemas.py  notification_services.py  notifications.py  routes.py  schemas.py  services.py
docs/: SUMMARY.md  api-reference.md  deployment.md  feature-comparison.md  getting-started.md  index.md
nemo_docs/: analyticsactivitylogs.md  api-overview-and-schemas.md  apireference.md  architecture-overview.md  authentication-and-authorization-services.md  authenticationauthorization.md  config.json  database-models-and-services.md  databasesetupmigrations.md  datamodelschemas.md  deployment-and-infrastructure.md  deploymentinfrastructure.md  dockercomposenginx.md  docs.md  feature-comparison-and-roadmap.md  featurecomparisonmonetization.md  fileuploadsattachments.md  getting-started-guide.md  gettingstarted.md  loggingmonitoringandhealthchecks.md  notification-models--services.md  notifications-api-routes.md  page_output.json  routesendpoints.md  section_1.md  section_10.md  section_2.md  section_3.md  section_4.md  section_5.md  section_6.md  section_7.md  section_8.md  section_9.md  securityratelimiting.md  serviceslayerbusinesslogic.md  summary.txt  testingcicdandreleaseprocess.md  troubleshootingmaintenance.md  webhooksapikeys.md
new_docs/: Architecture.md  config.json
(+2 files in other folders)
